--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                                 <ul class="ul-reset social-icons wow fadeInLeft" data-wow-delay="1.6s">
                                     <li><a href="https://www.facebook.com/romeo.rome.9828456?mibextid=ZbWKwL"><i class="fa-brands fa-facebook-f"></i></a></li>
                                     <li><a href="https://masadullahportfolio.netlify.app/"><i class="fa-light fa-basketball"></i></a></li>
-                                    <li><a href="https://www.linkedin.com/in/asadullah-qureshi-660217247?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                                    <li><a href="https://www.linkedin.com/in/muhammad-asadullah-qureshi-660217247/"><i class="fa-brands fa-linkedin-in"></i></a></li>
                                     <li><a href="https://github.com/asadullah1s"><i class="fa-brands fa-github"></i></a></li>
                                 </ul>
                             </div>
